--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: aws-v5
+name: jurumarble
 on:
   push:
     branches:
@@ -46,8 +46,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: jurumarble-env # 엘리스틱 빈스톡 애플리케이션 이름!
-          environment_name: Jurumarble-eb-env # 엘리스틱 빈스톡 환경 이름!
+          application_name: jurumarble # 엘리스틱 빈스톡 애플리케이션 이름!
+          environment_name: Jurumarble-env # 엘리스틱 빈스톡 환경 이름!
           version_label: aws-v5-${{steps.current-time.outputs.formattedTime}}
           region: ap-northeast-2
           deployment_package: deploy/deploy.zip         #deploy 파일의 deploy.zip 파일을 던지겠다. 엘라스틱빈스톡에 압축 파일 배포도 가능!
