fix : 502 nginx 오류

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ src/main/resources/application.properties
 !build/libs
 
 *.yml
+!application.yml
+!application-prod.yml
 !deploy.yml
 */**/generated/
 
