--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,8 +6,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${rds.hostname}:${rds.port}/${rds.db.name}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mariadb://${rds.hostname}:${rds.port}/${rds.db.name}?allowPublicKeyRetrieval=true&useSSL=false
+    driver-class-name: org.mariadb.jdbc.Driver
     username: ${rds.username}
     password: ${rds.password}
 
