--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -31,7 +31,6 @@ jwt.issuer: ${jwt.issuer}
 jwt.secretKey: ${jwt.secretKey}
 jwt.tokenPrefix: ${jwt.tokenPrefix}
 
-
 ## Swagger 설정
 springdoc:
   swagger-ui:
@@ -40,3 +39,5 @@ springdoc:
     path: /api-docs
   show-actuator: true
   default-produces-media-type: application/json
+
+swagger.url: ${swagger.url}
