--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'
+	runtimeOnly 'io.github.openfeign:feign-httpclient:12.1'
 }
 
 tasks.named('test') {
