--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,17 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.4'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'co.kr.jurumarble'
 version = '0.0.1-SNAPSHOT'
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
 
 java {
 	sourceCompatibility = '11'
@@ -36,6 +43,28 @@ dependencies {
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'
 	runtimeOnly 'io.github.openfeign:feign-httpclient:12.1'
+
+	//querydsl 추가
+	implementation "com.querydsl:querydsl-jpa:5.0.0"
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0"
+
+}
+
+// Querydsl 설정 추가
+
+def querydslDir = "$buildDir/generated/querydsl"
+querydsl {
+	jpa = true
+	querydslSourcesDir = querydslDir
+}
+sourceSets {
+	main.java.srcDir querydslDir
+}
+configurations {
+	querydsl.extendsFrom compileClasspath
+}
+compileQuerydsl {
+	options.annotationProcessorPath = configurations.querydsl
 }
 
 tasks.named('test') {
