--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'
 	runtimeOnly 'io.github.openfeign:feign-httpclient:12.1'
+	implementation 'com.netflix.feign:feign-jackson:8.18.0'
 }
 
 tasks.named('test') {
