--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew                  # gradlew 실행권한 부여
       - name: Build with Gradle
-        run: ./gradlew clean build               # build 하기
+        run: ./gradlew clean build -x test          # build 하기
 
       # UTC가 기준이기 때문에 한국시간으로 맞추려면 +9시간 해야 한다.
       - name: Get current time
