--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -91,3 +91,22 @@ springdoc:
   default-produces-media-type: application/json
 
 swagger.url: ${swagger.url}
+
+## tourApi 환경변수 설정
+tour:
+  api:
+    url: http://apis.data.go.kr/B551011/KorService1/
+    servicekey: ${tour.api.servicekey}
+    mobile:
+      os: ETC
+      app: jurumarble
+    response:
+      type: json
+    image-yn: Y
+    content-type-id: 39
+    subimage-yn: Y
+    num-of-rows: 10
+    list-yn: Y
+    arrange: O
+    cat1: A05
+    cat2: A0502
