chore : 서버 로그 경로 변경

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -91,9 +91,9 @@ tour:
 
 logging:
   level:
-    '[org.springframework.boot.web]': ERROR
+    '[org.springframework.boot.web]': INFO
   file:
-    name: /var/log/myapp.log
+    name: /var/app/current/jurumarble.log
 
 
 ## JWT 환경변수 설정
