--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${rds.hostname}:${rds.port}/${rds.db.name}?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://${rds.hostname}:${rds.port}/${rds.db.name}
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${rds.username}
     password: ${rds.password}
@@ -120,7 +120,7 @@ cloud:
       access-key: ${aws.credentials.access.key}
       secret-key: ${aws.credentials.secret.key}
     s3:
-      bucket: elasticbeanstalk-ap-northeast-2-319210348301
+      bucket: elasticbeanstalk-ap-northeast-2-319210348301 //숨겨야 됨
     region:
       static: ap-northeast-2
     stack:
