--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 	//s3 추가
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+	//redis 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 }
 
 // Querydsl 설정 추가
