fix : redis 캐싱 시간을 10분 -> 3일로 변경 및 host,port 환경변수로 지정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -13,8 +13,8 @@ spring:
   cache:
     type: redis
   redis:
-    host: jurumarble-redis-001.upetyi.0001.apn2.cache.amazonaws.com
-    port: 6379
+    host: ${redis.host}
+    port: ${redis.port}
 
   jpa:
     open-in-view: true
