432de3e Merge branch 'dev'

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,6 +10,9 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${rds.username}
     password: ${rds.password}
+  servlet:
+    multipart:
+      max-file-size: 20MB
   cache:
     type: redis
   redis:
