--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,6 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.testng:testng:7.1.0'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -54,6 +53,13 @@ dependencies {
 
 	//redis 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	//Guava
+	implementation 'com.google.guava:guava:30.1-jre'
+
+	//test
+	testImplementation 'io.rest-assured:rest-assured:4.5.1'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
 
