--- a/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
+++ b/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
@@ -1,1 +1,10 @@
-client_max_body_size 20M;
+server {
+    client_max_body_size 20M;
+
+    location /events {
+        proxy_pass https://jurumarble.site;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_buffering off;
+    }
+}
