feat : dns경로 수정

--- a/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
+++ b/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
@@ -2,7 +2,7 @@ server {
     client_max_body_size 20M;
 
     location /events {
-        proxy_pass http://jurumarble-env.eba-dy66sjwx.ap-northeast-2.elasticbeanstalk.com;
+        proxy_pass dualstack.awseb--awseb-offu1gzxgujh-284158038.ap-northeast-2.elb.amazonaws.com.;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
         proxy_buffering off;
