--- a/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
+++ b/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
@@ -2,7 +2,7 @@ server {
     client_max_body_size 20M;
 
     location /events {
-        proxy_pass https://dualstack.awseb--awseb-offu1gzxgujh-284158038.ap-northeast-2.elb.amazonaws.com.;
+        proxy_pass https://jurumarble.site/;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
         proxy_buffering off;
