--- a/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
+++ b/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
@@ -2,7 +2,7 @@ server {
     client_max_body_size 20M;
 
     location /events {
-        proxy_pass http://_cab2fb4829a72481548a6a12aec31c84.jurumarble.site;
+        proxy_pass https://_cab2fb4829a72481548a6a12aec31c84.jurumarble.site;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
         proxy_buffering off;
