feat : dns주소 세팅

--- a/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
+++ b/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
@@ -2,14 +2,9 @@ server {
     client_max_body_size 20M;
 
     location /events {
-        proxy_pass https://_cab2fb4829a72481548a6a12aec31c84.jurumarble.site;
+        proxy_pass http://jurumarble-env.eba-dy66sjwx.ap-northeast-2.elasticbeanstalk.com/;
         proxy_http_version 1.1;
-        proxy_set_header Connection "keep-alive";
+        proxy_set_header Connection "";
         proxy_buffering off;
-        proxy_ssl_server_name on;
-
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
     }
 }
