--- a/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
+++ b/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
@@ -1,10 +1,11 @@
 server {
-    client_max_body_size 20M;
+    listen 80;
+    server_name https://jurumarble.site;
 
-    location /events {
-        proxy_pass http://jurumarble-env.eba-dy66sjwx.ap-northeast-2.elasticbeanstalk.com/;
+    location / {
+        proxy_pass https://jurumarble.site;  # 백엔드 서버의 주소
         proxy_http_version 1.1;
-        proxy_set_header Connection "";
+        proxy_set_header Connection "keep-alive";
         proxy_buffering off;
     }
 }
