--- a/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
+++ b/.platform/nginx/conf.d/elasticbeanstalk/myconf.conf
@@ -1,11 +1,1 @@
-server {
-    listen 80;
-    server_name https://jurumarble.site;
-
-    location / {
-        proxy_pass https://jurumarble.site;  # 백엔드 서버의 주소
-        proxy_http_version 1.1;
-        proxy_set_header Connection "keep-alive";
-        proxy_buffering off;
-    }
-}
+client_max_body_size 20M;
